ide50 (22) GM; urgency=medium

  * apache50 support for changing apache configs from command line
  * mysql50 for consistent start/stop of MySQL

 -- CS50 <sysadmins@cs50.harvard.edu>  Mon, 3 Aug 2015 16:30:00 -0400

ide50 (21) GM; urgency=medium

  * default apache index page handles now also handles offline IDE
  * password50 support and generation

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 30 Jul 2015 15:00:00 -0400

ide50 (20) GM; urgency=medium

  * provide sentinel value to dropbox50 script if error to prevent shell exit
  * further improvements to included bins for offline version

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 19 Jun 2015 16:45:00 -0500

ide50 (19) GM; urgency=medium

  * updated hostname50 and stats50 for offline version

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 19 Jun 2015 14:00:00 -0500

ide50 (18) GM; urgency=medium

  * updated stats50 for improved server detection

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 5 Jun 2015 14:45:00 -0500

ide50 (17) GM; urgency=medium

  * included stats50 for updated Stats UI plugin

 -- CS50 <sysadmins@cs50.harvard.edu>  Thu, 4 Jun 2015 17:15:00 -0500

ide50 (16) GM; urgency=medium

  * fixed update50 to populate env variables required for phpmyadmin install
  * re-added support for phpmyadmin install; run update50 twice
  * do a better job appending lines only if they're not appended to bashrc
  * added `username50`
  * Maintain Apache's running state after install

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 22 May 2015 20:25:00 -0500

ide50 (15) GM; urgency=medium

  * removed phpmyadmin, changed app.sh to ide50.sh

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 22 May 2015 13:25:00 -0500

ide50 (14) GM; urgency=medium

  * actually added phpmyadmin

 -- CS50 <sysadmins@cs50.harvard.edu>  Fri, 22 May 2015 11:25:00 -0500

ide50 (13) GM; urgency=medium

  * added phpmyadmin

 -- CS50 <sysadmins@cs50.harvard.edu>  Wed, 7 May 2015 16:05:00 -0500

ide50 (12) GM; urgency=medium

  * fixed update50
